chore: circular lock provider update